envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-cfg-1
  namespace: default
data:
  envoy.yaml: >
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 127.0.0.1
            port_value: 8080
        filter_chains:
          filters:
          - name: envoy.http_connection_manager
            config:
              stat_prefix: ingress_http
              http_filters:
              - name: envoy.router
                config: {}
              route_config:
                virtual_hosts:
                - name: xyz
                  domains: "*"
                  routes:
                  - route:
                      cluster: cluster1
                    match:
                      prefix: "/"
      clusters:
      - name: cluster1
        type: STRICT_DNS
        connect_timeout: 1s
        hosts:
        - socket_address:
            address: 127.0.0.1
            port_value: 8000
